--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "laravel-echo": "^1.10.0",
+        "pusher-js": "^7.0.3",
         "vue-spinner": "^1.0.4",
         "vuex": "^3.6.2"
     }
